[fix] Text HomePage on mobile
It was not fine at all on my iPhone. Text was on the left.

--- a/src/style/homepage.css
+++ b/src/style/homepage.css
@@ -19,7 +19,8 @@
 }
 
 .homepageDiv p {
-    max-width: 50vw;
+    padding-right: 5vw;
+    padding-left: 5vw;
     text-align: center;
 }
 
